# url-shortener

./: .env.example  .gitignore  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  url.py
